# zip2pdf

./: .gitignore  LICENSE  README-short.md  README.md  pyproject.toml  zip2pdf.py
test_archive/viirtuoz-vps-dev-rewrite-back-2/: .dockerignore  .gitignore  Dockerfile  README.md  README_RU.md  docker-compose.stub.yml  docker-compose.yml.example  entrypoint.sh  env.example  pyproject.toml  requirements.txt  run-stub-mode.sh
test_archive/viirtuoz-vps-dev-rewrite-back-2/app/: bootstrap.py  config.py.example  cursor_billing_feature_planning_for_vir.md  database.py  debug_log.py  main.py  models.py  scheduling_config.py  schemas.py  templating.py
test_archive/viirtuoz-vps-dev-rewrite-back-2/conf/: default.conf  gzip.conf
test_archive/viirtuoz-vps-dev-rewrite-back-2/docs/: CDI-SETUP.md  CLOUD_INIT_FILES_EXAMPLES.md  CUSTOM-DRIVER-INTEGRATION.md  DEVELOPMENT.md  DUAL-DISPLAY-VNC-GPU.md  GPU-PASSTHROUGH-FIX.md  GPU-SETUP.md  KUBERNETES-DEPLOYMENT.md  KUBEVIRT-GPU-UNIFIED-EXAMPLE.md  KUBEVIRT-UPGRADE.md  NVIDIA-CUSTOM-DRIVER.md  RDP_QUICK_REFERENCE.md  SECURITY_IMPROVEMENTS.md  SERVICE_MANAGEMENT_ARCHITECTURE.md  VM-SCHEDULING-CSI.md  VM_RUN_STRATEGY.md  VM_RUN_STRATEGY_QUICKSTART.md  WINDOWS-GOLDEN-IMAGE-EXPORT.md  WINDOWS-GOLDEN-IMAGE-QUICK-START.md  WINDOWS-GOLDEN-IMAGE-SETUP.md  WINDOWS-GPU-SETUP.md  WINDOWS-RDP-USAGE.md  WINDOWS-SERIAL-CONSOLE-SETUP.md  WINDOWS-USAGE.md
test_archive/viirtuoz-vps-dev-rewrite-back-2/entrypoint/: 90-oauth-proxy.sh  91-startkubectl.sh
test_archive/viirtuoz-vps-dev-rewrite-back-2/kubernetes_example/: bundled.yaml  deployment.yaml  ns.yaml  (+14 more)
(+74 files in other folders)
